--- a/_plays/12.md
+++ b/_plays/12.md
@@ -1,32 +1,36 @@
 ---
 id: 12
-title: Use data to drive decisions
+title: Measure and report the impact
 ---
 
-At every stage of a project, we should measure how well our service is working for our users. This includes measuring how well a system performs and how people are interacting with it in real-time. Our teams and agency leadership should carefully watch these metrics to find issues and identify which bug fixes and improvements should be prioritized. Along with monitoring tools, a feedback mechanism should be in place for people to report issues directly.
+At every stage of a project, teams should measure how well service components are working for users. At the point of going live, it is critical to have in place the methodology for measuring outcomes and the evaluation plan to provide feedback to the sponsors and stakeholders on initial performance. The measurement methodology and the evaluation plan should both be in accordance with the metrics chosen to describe the outcome of the work but also on improvements required after going live. Reporting the impact should never shy away from failures as they can be valuable learning experiences. The performance measurement process should also serve to identify fixes and improvements and prioritize them based on user needs and input. Along with monitoring tools, a feedback mechanism should be in place for people to report issues directly.
 
 ### Checklist
-1. Monitor system-level resource utilization in real time
-2. Monitor system performance in real-time (e.g. response time, latency, throughput, and error rates)
-3. Ensure monitoring can measure median, 95th percentile, and 98th percentile performance
-4. Create automated alerts based on this monitoring
-5. Track concurrent users in real-time, and monitor user behaviors in the aggregate to determine how well the service meets user needs
-6. Publish metrics internally
-7. Publish metrics externally
-8. Use an experimentation tool that supports multivariate testing in production
+1. Monitor system-level resource utilization in real time.
+2. Monitor system performance in real time (e.g., response time, latency, throughput, error rates).
+3. Ensure monitoring can measure median, 95th percentile, and 98th percentile performance.
+4. Create automated alerts based on this monitoring.
+5. Track concurrent users in real-time, and monitor user behaviors in the aggregate to determine how well the service meets user needs.
+6. Publish metrics internally.
+7. Publish metrics externally.
+8. Establish and document a system for user-submitted fixes and enhancements and a triage plan that identifies priorities and establishes timeframes for corrections.
+9. Use an experimentation tool that supports multivariate testing in production.
+10. Consider the use of an independent third party, such as an academic institution, to review metrics and results of the IS&S Environment implementation to ensure that the evaluation is accurate, unbiased, and neutral.
 
 
 ### Key Questions
-- What are the key metrics for the service?
+- What are the key metrics for the IS&S Environment?
 - How have these metrics performed over the life of the service?
 - Which system monitoring tools are in place?
-- What is the targeted average response time for your service? What percent of requests take more than 1 second, 2 seconds, 4 seconds, and 8 seconds?
-- What is the average response time and percentile breakdown (percent of requests taking more than 1s, 2s, 4s, and 8s) for the top 10 transactions?
 - What is the volume of each of your service’s top 10 transactions? What is the percentage of transactions started vs. completed?
-- What is your service’s monthly uptime target?
-- What is your service’s monthly uptime percentage, including scheduled maintenance? Excluding scheduled maintenance?
 - How does your team receive automated alerts when incidents occur?
-- How does your team respond to incidents? What is your post-mortem process?
-- Which tools are in place to measure user behavior?
-- What tools or technologies are used for A/B testing?
-- How do you measure customer satisfaction?
+- How does your team respond to incidents? What is your post-incident evaluation process?
+- Which tools are in place to monitor/measure user behavior?
+- How do you measure user satisfaction?
+- How are you reporting performance to the governance body and agency executives?
+- Are you policies and procedures adequately addressing safeguarding and privacy issues?
+
+### Resources
+The following resources can help you with this play:
+- Check back soon for additional resources! 
+Have ideas for resources for this play? Email us at info@standardscoordination.org. 
