--- a/_plays/13.md
+++ b/_plays/13.md
@@ -1,24 +1,46 @@
 ---
 id: 13
-title: Default to open
+title: Share your experiences
 ---
 
-When we collaborate in the open and publish our data publicly, we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to contribute easily, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
+Every Information Sharing and Safeguarding (IS&S) Environment project offers value for all the projects that come after it. As members of the greater community of interest, sharing our IS&S Environment successes and failures is critical to the success of the information sharing and safeguarding mission. Not only will contributing your project information help others build IS&S Environment capabilities, but as you become more familiar with the community and the resources it includes, it will improve your chances of success in your next IS&S Environment endeavor!
 
 ### Checklist
-1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
-2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
-3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
-4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
-5. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
-6. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
-7. When appropriate, create an API for third parties and internal users to interact with the service directly
-8. When appropriate, publish source code of projects or components online
-9. When appropriate, share your development process and progress publicly
+1. Document successes and failures as both are equally valuable to your future projects and the IS&S Environment projects of the greater community of interest.
+2. Identify the relevant community of interest organizations related to your IS&S Environment project (i.e., standards development organizations, industry organizations, government repositories, Standards Coordinating Council) and share your experiences, best practices and documentation as allowable.
+3. Contribute specific information about standard use to the organizations with ownership of the standards used in your IS&S Environment.
+4. Consider compliance certification (e.g., Springboard Certification Program, Open Geospatial Consortium Compliance Testing and Certification), which will document the success of your IS&S Environment and contribute to the larger body of knowledge in the process.
+5. Contribute Information Exchange Package Documentations (IEPDs) to the IEPD Clearinghouse.
+6. When appropriate, publish source code of projects or components online.
+7. When appropriate, share your development process and progress publicly.
+8. Consider presenting your findings at conferences and educational summits within appropriate communities of interest.
 
 ### Key Questions
-- How are you collecting user feedback for bugs and issues?
-- If there is an API, what capabilities does it provide? Who uses it? How is it documented?
-- If the codebase has not been released under an open source license, explain why.
-- What components are made available to the public as open source?
-- What datasets are made available to the public?
+- What do I have that will be useful to others?
+- How can the team get involved in organizations within the community of interest?
+- Where do I go to share my lessons learned and best practices?
+- How do we share our success stories with the legislators and sponsors?
+- What are the failures and how are we going to address them to ensure corrective actions in the current IS&S Environment and prevent future failures?
+
+### Resources
+The following resources can help you with this play:
+- Standards Coordinating Council, http://www.standardscoordination.org
+- Relevant Standards Development Organizations (SDOs)
+    * Open Geospatial Consortium Standards, http://www.opengeospatial.org/standards
+    * Object Management Group, http://www.omg.org/
+    * OASIS (a nonprofit consortium that drives the development, convergence and adoption of open standards for the global information society), https://www.oasis-open.org/
+    * National Institute of Standards and Technology (NIST), http://www.nist.gov/
+    * International Organization for Standardization (ISO), http://www.iso.org/iso/home/standards.htm
+- IJIS Institute, http://www.ijis.org
+- Information Exchange Package Documentation (IEPD) Clearinghouse (IEPDs that have been submitted by individuals and organizations who have implemented the Global Justice XML Data Model and the National Information Exchange Model), http://iepd.custhelp.com/
+- Compliance Testing and Certification Programs
+    * Springboard Certification Program, http://www.ijis.org/?page=Springboard
+    * Open Geospatial Consortium Compliance Testing and Certification, http://www.opengeospatial.org/compliance
+- National Information Exchange Model (NIEM), http://www.niem.gov
+- Global Information Sharing Toolkit, Bureau of Justice Assistance-Justice Information Sharing, https://it.ojp.gov/about-gist
+- Information Sharing Environment (ISE) Information Interoperability Framework (I2F), http://ise.gov/sites/default/files/FINAL%20-%20ISE_I2F_v0%205.pdf
+- Data Aggregation Reference Architecture (DARA), http://www.standardscoordination.org/sites/default/files/docs/DARA_v1.pdf
+- Geospatial Interoperability Reference Architecture (GIRA), http://ise.gov/sites/default/files/GIRA.pdf
+- Structured Threat Information eXpression (STIX), https://stixproject.gitbub.io
+- Trusted Automated eXchange of Indicator Information (TAXII), https://taxiiproject.github.io
+- Relevant Practitioner Associations
