--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ layout: "404"
 
 # Page Not Found
 
-[Return to CIO.gov]("http://cio.gov")
+[Return to standardscoordination.org]("http://standardscoordination.org")
 
-Last Update August 8, 10:48am
+Last Update November 10, 2:59pm
