--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,6 +1,6 @@
 ---
 id: 1
-title: Understand what people need
+title: Understand What People Need
 ---
 
 We must begin Information Sharing and Safeguarding (IS&S) Environment projects by exploring and pinpointing the needs of the people who will use the service, and the ways the IS&S Environment will allow them to fulfill their missions. Policy makers must include users in their design process from the beginning. The needs of people and their organizational missions — not constraints of government processes or legacy systems — should inform technical and design decisions. We need to continually test the products we build with real people – the actual business process owners – to ensure the product is kept current and remains useful.
