Fixed a link on the 404 page.

--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ layout: "404"
 
 # Page Not Found
 
-[Return to CIO.gov]("http://cio.gov")
+[Return to CIO.gov](https://cio.gov)
 
 Last Update August 8, 10:48am
