--- a/_plays/13.md
+++ b/_plays/13.md
@@ -8,17 +8,18 @@ When we collaborate in the open and publish our data publicly, we can improve Go
 ### Checklist
 1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
 2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
-3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
-4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
-5. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
-6. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
-7. When appropriate, create an API for third parties and internal users to interact with the service directly
-8. When appropriate, publish source code of projects or components online
-9. When appropriate, share your development process and progress publicly
+3. Use/modify/create open standards, in that order. Widely adopted open standards, which are defined by an open standards body, facilitate interoperability and mitigate risk of obsolencense. 
+4. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
+5. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
+6. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
+7. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
+8. When appropriate, create an API for third parties and internal users to interact with the service directly
+9. When appropriate, publish source code of projects or components online
+10. When appropriate, share your development process and progress publicly
 
 ### Key Questions
 - How are you collecting user feedback for bugs and issues?
-- If there is an API, what capabilities does it provide? Who uses it? How is it documented?
+- If there is an API, what capabilities does it provide? Who uses it? How is it documented? Does the API make use of relevant open standards?
 - If the codebase has not been released under an open source license, explain why.
 - What components are made available to the public as open source?
 - What datasets are made available to the public?
