started renaming relevant plays

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,25 +1,19 @@
 ---
 play_number: 1
-title: Understand what people need
+title: Address the whole experience, from start to finish
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
 
 ### Checklist
-1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of solutions with real people, in the field if possible
-4. Document the findings about user goals, needs, behaviors, and preferences
-5. Share findings with the team and agency leadership
-6. Create a prioritized list of tasks the user is trying to accomplish, also known as "user stories"
-7. As the digital service is being built, regularly test it with potential users to ensure it meets people’s needs
+1. Understand the different points at which people will interact with the service – both online and in person
+2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
+3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
+4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
+
 
 ### Key Questions
-- Who are your primary users?
-- What user needs will this service address?
-- Why does the user want or need this service?
-- Which people will have the most difficulty with the service?
-- Which research methods were used?
-- What were the key findings?
-- How were the findings documented? Where can future team members access the documentation?
-- How often are you testing with real people?
+- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
+- Where are user pain points in the current way people accomplish the task?
+- Where does this specific project fit into the larger way people currently obtain the service being offered?
+- What metrics will best indicate how well the service is working for its users?
