--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,22 +1,16 @@
 ---
 play_number: 3
-title: Make it simple and intuitive
+title: Bring in experienced teams
 ---
 
-Using a government service shouldn’t be stressful, confusing, or daunting. It’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
+We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
 
 ### Checklist
-1. Use a simple and flexible design style guide for the service. Use the [U.S. Web Design Standards](https://playbook.cio.gov/designstandards) as a default 
-2. Use the design style guide consistently for related digital services
-3. Give users clear information about where they are in each step of the process
-4. Follow accessibility best practices to ensure all people can use the service
-5. Provide users with a way to exit and return later to complete the process
-6. Use language that is familiar to the user and easy to understand
-7. Use language and design consistently throughout the service, including online and offline touch points
-
-### Key Questions
-- What primary tasks are the user trying to accomplish?
-- Is the language as plain and universal as possible?
-- What languages is your service offered in?
-- If a user needs help while using the service, how do they go about getting it?
-- How does the service’s design visually relate to other government services?
+1. Member(s) of the team have experience building popular, high-traffic digital services
+2. Member(s) of the team have experience designing mobile and web applications
+3. Member(s) of the team have experience using automated testing frameworks
+4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
+5. Member(s) of the team have experience securing digital services
+6. A Federal contracting officer is on the internal team if a third party will be used for development work
+7. A Federal budget officer is on the internal team or is a partner
+8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
