--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,29 +1,17 @@
 ---
 play_number: 4
-title: Build the service using agile and iterative practices
+title: Choose a modern technology stack
 ---
 
-We should use an incremental, fast-paced style of software development to reduce the risk of failure. We want to get working software into users’ hands as early as possible to give the design and development team opportunities to adjust based on user feedback about the service. A critical capability is being able to automatically test and deploy the service so that new features can be added often and be put into production easily.
+The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector.
 
 ### Checklist
-1. Ship a functioning “minimum viable product” (MVP) that solves a core user need as soon as possible, no longer than three months from the beginning of the project, using a “beta” or “test” period if needed
-2. Run usability tests frequently to see how well the service works and identify improvements that should be made
-3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, war rooms, daily standups, and team chat tools
-4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
-5. Release features and improvements multiple times each month
-6. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
-7. Use a source code version control system
-8. Give the entire project team access to the issue tracker and version control system
-9. Use code reviews to ensure quality
-
+1. Choose software frameworks that are commonly used by private-sector companies creating similar services
+2. Whenever possible, ensure that software can be deployed on a variety of commodity hardware types
+3. Ensure that each project has clear, understandable instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
+4. [Consider open source software solutions](http://www.whitehouse.gov/sites/default/files/omb/assets/egov_docs/memotociostechnologyneutrality.pdf) at every layer of the stack
 
 ### Key Questions
-- How long did it take to ship the MVP? If it hasn't shipped yet, when will it?
-- How long does it take for a production deployment?
-- How many days or weeks are in each iteration/sprint?
-- Which version control system is being used?
-- How are bugs tracked and tickets issued? What tool is used?
-- How is the feature backlog managed? What tool is used?
-- How often do you review and reprioritize the feature and bug backlog?
-- How do you collect user feedback during development? How is that feedback used to improve the service?
-- At each stage of usability testing, which gaps were identified in addressing user needs?
+- What is your development stack and why did you choose it?
+- Which databases are you using and why did you choose them?
+- How long does it take for a new team member to start developing?
