--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,16 +1,32 @@
 ---
 play_number: 7
-title: Bring in experienced teams
+title: Use data to drive decisions
 ---
 
-We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
+At every stage of a project, we should measure how well our service is working for our users. This includes measuring how well a system performs and how people are interacting with it in real-time. Our teams and agency leadership should carefully watch these metrics to find issues and identify which bug fixes and improvements should be prioritized. Along with monitoring tools, a feedback mechanism should be in place for people to report issues directly.
 
 ### Checklist
-1. Member(s) of the team have experience building popular, high-traffic digital services
-2. Member(s) of the team have experience designing mobile and web applications
-3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
-5. Member(s) of the team have experience securing digital services
-6. A Federal contracting officer is on the internal team if a third party will be used for development work
-7. A Federal budget officer is on the internal team or is a partner
-8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+1. Monitor system-level resource utilization in real time
+2. Monitor system performance in real-time (e.g. response time, latency, throughput, and error rates)
+3. Ensure monitoring can measure median, 95th percentile, and 98th percentile performance
+4. Create automated alerts based on this monitoring
+5. Track concurrent users in real-time, and monitor user behaviors in the aggregate to determine how well the service meets user needs
+6. Publish metrics internally
+7. Publish metrics externally
+8. Use an experimentation tool that supports multivariate testing in production
+
+
+### Key Questions
+- What are the key metrics for the service?
+- How have these metrics performed over the life of the service?
+- Which system monitoring tools are in place?
+- What is the targeted average response time for your service? What percent of requests take more than 1 second, 2 seconds, 4 seconds, and 8 seconds?
+- What is the average response time and percentile breakdown (percent of requests taking more than 1s, 2s, 4s, and 8s) for the top 10 transactions?
+- What is the volume of each of your service’s top 10 transactions? What is the percentage of transactions started vs. completed?
+- What is your service’s monthly uptime target?
+- What is your service’s monthly uptime percentage, including scheduled maintenance? Excluding scheduled maintenance?
+- How does your team receive automated alerts when incidents occur?
+- How does your team respond to incidents? What is your post-mortem process?
+- Which tools are in place to measure user behavior?
+- What tools or technologies are used for A/B testing?
+- How do you measure customer satisfaction?
