--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,19 +1,22 @@
 ---
 play_number: 2
-title: Address the whole experience, from start to finish
+title: Make it simple and intuitive
 ---
 
-We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
+Using a government service shouldn’t be stressful, confusing, or daunting. It’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
 
 ### Checklist
-1. Understand the different points at which people will interact with the service – both online and in person
-2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
-3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
-
+1. Use a simple and flexible design style guide for the service. Use the [U.S. Web Design Standards](https://playbook.cio.gov/designstandards) as a default 
+2. Use the design style guide consistently for related digital services
+3. Give users clear information about where they are in each step of the process
+4. Follow accessibility best practices to ensure all people can use the service
+5. Provide users with a way to exit and return later to complete the process
+6. Use language that is familiar to the user and easy to understand
+7. Use language and design consistently throughout the service, including online and offline touch points
 
 ### Key Questions
-- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
-- Where are user pain points in the current way people accomplish the task?
-- Where does this specific project fit into the larger way people currently obtain the service being offered?
-- What metrics will best indicate how well the service is working for its users?
+- What primary tasks are the user trying to accomplish?
+- Is the language as plain and universal as possible?
+- What languages is your service offered in?
+- If a user needs help while using the service, how do they go about getting it?
+- How does the service’s design visually relate to other government services?
