--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,18 +1,26 @@
 ---
 play_number: 6
-title: Assign one leader and hold that person accountable
+title: Automate testing and deployments
 ---
 
-There must be a single product owner who has the authority and responsibility to assign tasks and work elements; make business, product, and technical decisions; and be accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service meets needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring that features are built and managing the feature and bug backlogs.
+Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times a day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
 
 ### Checklist
-1. A product owner has been identified
-2. All stakeholders agree that the product owner has the authority to assign tasks and make decisions about features and technical implementation details
-3. The product owner has a product management background with technical experience to assess alternatives and weigh tradeoffs
-4. The product owner has a work plan that includes budget estimates and identifies funding sources
-5. The product owner has a strong relationship with the contracting officer
+1. Create automated tests that verify all user-facing functionality
+2. Create unit and integration tests to verify modules and components
+3. Run tests automatically as part of the build process
+4. Perform deployments automatically with deployment scripts, continuous delivery services, or similar techniques
+5. Conduct load and performance tests at regular intervals, including before public launch
+
 
 ### Key Questions
-- Who is the product owner?
-- What organizational changes have been made to ensure the product owner has sufficient authority over and support for the project?
-- What does it take for the product owner to add or remove a feature from the service?
+- What percentage of the code base is covered by automated tests?
+- How long does it take to build, test, and deploy a typical bug fix?
+- How long does it take to build, test, and deploy a new feature into production?
+- How frequently are builds created?
+- What test tools are used?
+- Which deployment automation or continuous integration tools are used?
+- What is the estimated maximum number of concurrent users who will want to use the system?
+- How many simultaneous users could the system handle, according to the most recent capacity test?
+- How does the service perform when you exceed the expected target usage volume? Does it degrade gracefully or catastrophically?
+- What is your scaling strategy when demand increases suddenly?
