--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,17 +1,24 @@
 ---
 play_number: 8
-title: Choose a modern technology stack
+title: Default to open
 ---
 
-The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector.
+When we collaborate in the open and publish our data publicly, we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to contribute easily, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
 
 ### Checklist
-1. Choose software frameworks that are commonly used by private-sector companies creating similar services
-2. Whenever possible, ensure that software can be deployed on a variety of commodity hardware types
-3. Ensure that each project has clear, understandable instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
-4. [Consider open source software solutions](http://www.whitehouse.gov/sites/default/files/omb/assets/egov_docs/memotociostechnologyneutrality.pdf) at every layer of the stack
+1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
+2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
+3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
+4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
+5. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
+6. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
+7. When appropriate, create an API for third parties and internal users to interact with the service directly
+8. When appropriate, publish source code of projects or components online
+9. When appropriate, share your development process and progress publicly
 
 ### Key Questions
-- What is your development stack and why did you choose it?
-- Which databases are you using and why did you choose them?
-- How long does it take for a new team member to start developing?
+- How are you collecting user feedback for bugs and issues?
+- If there is an API, what capabilities does it provide? Who uses it? How is it documented?
+- If the codebase has not been released under an open source license, explain why.
+- What components are made available to the public as open source?
+- What datasets are made available to the public?
