--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,12 +1,13 @@
 ---
 play_number: 1
-title: Address the whole experience, from start to finish
+title: Document everything
 ---
+
 
 We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
 
 ### Checklist
-1. Understand the different points at which people will interact with the service – both online and in person
+1. Document both the input **and** output.  
 2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
 3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
 4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
