culled usds plays, started rebuilding plays specifically for GP

--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,22 +1,24 @@
 ---
 play_number: 2
-title: Make it simple and intuitive
+title: Copy other projects
 ---
 
-Using a government service shouldn’t be stressful, confusing, or daunting. It’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
+There are many 
 
 ### Checklist
-1. Use a simple and flexible design style guide for the service. Use the [U.S. Web Design Standards](https://playbook.cio.gov/designstandards) as a default 
-2. Use the design style guide consistently for related digital services
-3. Give users clear information about where they are in each step of the process
-4. Follow accessibility best practices to ensure all people can use the service
-5. Provide users with a way to exit and return later to complete the process
-6. Use language that is familiar to the user and easy to understand
-7. Use language and design consistently throughout the service, including online and offline touch points
+1. Take a look at other examples and projects to generate documentation, which may inform.
+    - [API Blueprint](https://apiblueprint.org) 
+    -  
+2. 
+3. 
+4. 
+5. 
+6. 
+7. 
 
 ### Key Questions
-- What primary tasks are the user trying to accomplish?
-- Is the language as plain and universal as possible?
-- What languages is your service offered in?
-- If a user needs help while using the service, how do they go about getting it?
-- How does the service’s design visually relate to other government services?
+- 
+- 
+- 
+- 
+- 
