--- a/_plays/01.md
+++ b/_plays/01.md
@@ -3,18 +3,17 @@ play_number: 1
 title: Document everything
 ---
 
+The objective of building access for Document both the input *and* the output of the web service.  
 
-We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
 
 ### Checklist
-1. Document both the input **and** output.  
-2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
-3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
-
+1. List and briefly describe each field in the returned object, whether it is JSON, GeoJSON, XML, etc.
+2. Provide a sample query with sample output.
+3. Clearly highlight required versus optional arguments.
+4. Describe the response statuses.
 
 ### Key Questions
-- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
-- Where are user pain points in the current way people accomplish the task?
-- Where does this specific project fit into the larger way people currently obtain the service being offered?
-- What metrics will best indicate how well the service is working for its users?
+- Would you be able to meaningfully and quickly use the service if you revisited it one year from now?
+- Is there a standard data format for the subgroup that would most actively use the service?
+- 
+- 
