draft of play 01

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -11,9 +11,10 @@ The objective of building access for Document both the input *and* the output of
 2. Provide a sample query with sample output.
 3. Clearly highlight required versus optional arguments.
 4. Describe the response statuses.
+5. Consider existing projects that help generate documentation, like [Swagger](http://swagger.io/), [Slate](https://github.com/lord/slate), [ApiDocJS](http://apidocjs.com/), [SpringRestDoc](https://bitbucket.org/tritales/springrestdoc/overview), [RAML](http://raml.org/), or any of dozens of projects specifically built to document web services.
 
 ### Key Questions
 - Would you be able to meaningfully and quickly use the service if you revisited it one year from now?
 - Is there a standard data format for the subgroup that would most actively use the service?
-- 
-- 
+- Does your documentation or developer page require a custom solution, or can you rely on existing documentation projects?
+- If your mom were a halfway decent developer, would she be able to understand the documentation?  Is it accessible to a reasonably broad audience?
