notes from Aug 17 OSTP discussion; begin moving notes into plays

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -3,18 +3,18 @@ play_number: 1
 title: Document everything
 ---
 
-The objective of building access for Document both the input *and* the output of the web service.  
+Imagine you built a web service API and then forgot about it for a year.  Would your documentation be descriptive enough to immediately start using your own service?  Be kind to your future self -- document everything.
 
 
 ### Checklist
-1. List and briefly describe each field in the returned object, whether it is JSON, GeoJSON, XML, etc.
-2. Provide a sample query with sample output.
-3. Clearly highlight required versus optional arguments.
-4. Describe the response statuses.
-5. Consider existing projects that help generate documentation, like [Swagger](http://swagger.io/), [Slate](https://github.com/lord/slate), [ApiDocJS](http://apidocjs.com/), [SpringRestDoc](https://bitbucket.org/tritales/springrestdoc/overview), [RAML](http://raml.org/), or any of dozens of projects specifically built to document web services.
+1. Include an example call and response in the documentation.  Something that a developer can copy and paste into the browser to validate the response.
+2. Consider existing projects that automatically generate documentation sites, like [Swagger](http://swagger.io/), [Slate](https://github.com/lord/slate), [ApiDocJS](http://apidocjs.com/), [SpringRestDoc](https://bitbucket.org/tritales/springrestdoc/overview), or [RAML](http://raml.org/).
+3. Identify optional versus required arguments.
+4. Structure the input and output response types in a table.  Each row is an input argument or response field, with at least one attribute column to document the appropriate data type -- e.g., string, integer, float.
+
 
 ### Key Questions
-- Would you be able to meaningfully and quickly use the service if you revisited it one year from now?
-- Is there a standard data format for the subgroup that would most actively use the service?
+- If a developer wants to contribute, can the find where and how within the documentation?
+- Are the limitations of the returned data clear to developers to ensure proper and meaningful use?
+- Are there referrals to projects that rely on the web services?  If so, it may be worth including them in the documentation -- at least the documentation header.
 - Does your documentation or developer page require a custom solution, or can you rely on existing documentation projects?
-- If your mom were a halfway decent developer, would she be able to understand the documentation?  Is it accessible to a reasonably broad audience?
