--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,12 +1,13 @@
 ---
 play_number: 3
-title: Bring in experienced teams
+title: Bring in experienced and diverse teams
 ---
 
-We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
+Good work can't get done without good people.  Don't underestimate the return on investing in a good team with many perspectives and multiple talents.  
 
 ### Checklist
-1. Member(s) of the team have experience building popular, high-traffic digital services
+1. Teammates with high-traffic digital services.
+2. Member(s) of the team have experience building popular, high-traffic digital services
 2. Member(s) of the team have experience designing mobile and web applications
 3. Member(s) of the team have experience using automated testing frameworks
 4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
@@ -14,3 +15,7 @@ We need talented people working in government who have experience creating moder
 6. A Federal contracting officer is on the internal team if a third party will be used for development work
 7. A Federal budget officer is on the internal team or is a partner
 8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+
+### Key Questions
+
+- Are there
